sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var value : Int;
    ^AlgInsertionSort:6: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var indiceInserer : Int;
    ^AlgInsertionSort:16: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
getValeur(indiceInserer + 1)=value;
^