sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {

var i : Int = 0;
var value : Int;
var indiceInserer : Int;

while(i < (getNombreValeurs()-1))
{
value = getValeur(i);
indiceInserer = i-1;
while(indiceInserer>=0 && value<=getValeur(indiceInserer))
{setValeur(indiceInserer+1,getValeur(indiceInserer));
indiceInserer = indiceInserer - 1;
}
getValeur(indiceInserer + 1)=value;
i=i+1;


 
}
	
	
	
	
}
 

